styles/styles.scss
$font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Lato, Helvetica, Arial, sans-serif;
$primary: #50545B;
$header-bg: $primary;
$body-color: darken($primary, 10%);
$link-color: $body-color;
$header-bg: #50545B;
$header-color: #A0A3B5;
$header-secondary: #CDC4BE;
$body-bg: #AAADB4;
$thumbnail-border-color: $body-color;
$card-bg: darken($body-bg, 10%);
$text-muted: lighten($primary, 5%);
$list-group-bg: transparent;
$nav-link-disabled-color: $body-bg;

@import "~bootstrap/scss/bootstrap";

header {
  background-color: $header-bg;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1030;
  position: fixed;
  color: $header-color;

  img {
    height: 2.5em;
  }

  a,
  .btn {
    color: $header-color;
    &:hover,
    &:active,
    &.active {
      color: $header-secondary;
    }
  }
}

a {
  text-decoration: underline;
}

main {
  transition: opacity .3s ease;
  opacity: 1;
}

body .wrapper {
  position: relative;
  overflow: hidden;
  width: 100%;
  > .canvas {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    position: relative;
    -webkit-transform: translate3d(0);
    transform: translate3d(0);
    -webkit-transition: all .3s ease;
    transition: all .3s ease;
    &.nav-opening,
    &.nav-open {
      -webkit-transform: translate3d(-200px, 0, 0);
      transform: translate3d(-200px, 0, 0);
      main {
        opacity: 0.2;
        .event-container {
          pointer-events: none;
        }
      }
    }
    &.nav-open,
    &.nav-opening,
    &.nav-closing {
      header {
        position: absolute;
      }
    }
  }
}

body svg {
  fill: currentColor;
}

nav.main {
  width: 200px;
  height: 100vh;
  position: absolute;
  top: 0;
  right: -200px;
  padding: 15px;
  background-color: $card-bg;
  font-size: 1.5em;
  a {
    text-decoration: none;
  }
  .home svg {
    vertical-align: baseline;
  }
  .search svg {
    vertical-align: text-bottom;
    margin-bottom: 2px;
  }
}

.has-banner .icon {
  margin-top: -50%;
  .rounded {
    background-color: $body-bg;
  }
}

.has-image .feed-icon  {
  margin-top: -60%;
  .rounded {
    background-color: $card-bg;
  }
}

.banner {
  min-height: 10vh;
}

img.embed-responsive-item {
  object-fit: cover;
}

.card {
  border: none;
}

a.active {
  color: $link-hover-color;
}

.card-header a,
.card-title a {
  color: $body-color;
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
}

.card-header,
.card-body {
  padding-left: $card-group-margin;
  padding-right: $card-group-margin;
}

.feed-desc {
  min-width: 40%;
}

.feed-item {
  content-visibility: auto;
  contain-intrinsic-size: 600px;
  padding-left: 0;
  padding-right: 0;
}

@include media-breakpoint-up('lg') {
  .has-icon .collection {
    flex: 0 0 80%;
    min-width: 80%;
  }
}

@include media-breakpoint-up('sm') {
  .feed-item {
    padding-left: $grid-gutter-width / 2;
    padding-right: $grid-gutter-width / 2;
  }
}

